# microscope-memory

./: .gitignore  .mcp.json  AGENTS.md  ANALYSIS.md  BENCHMARKS.md  CHANGELOG.md  COGNITIVE_ENHANCEMENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LAUNCH_KIT.md  LICENSE  OneClick_Start.bat  PUBLISH.md  README.md  RongyaszTTS_Waveform.spec  SECURITY.md  WHITEPAPER.md  anthropic_ollama_proxy.py  bridge-proxy.mjs  build.rs  build_blocks.py  claude-ollama.cmd  config.example.toml  config.toml  create-desktop-shortcut.ps1  demo.html  errors.txt  factory_settings.py  factory_settings2.py  find_backtick.py  fix_autonomous_store.py  fix_ffplay.py  fix_final.py  fix_final2.py  fix_final3.py  fix_forget.py  fix_forget2.py  fix_forget3.py  fix_forget4.py  (+82 more)
.claude/: settings.json  settings.local.json
.devcontainer/: devcontainer.json
.github/: claude_desktop_config.json
.github/cloud-deploy/: .env.example  backup.sh  bootstrap-ubuntu.sh  cron.example  install_fail2ban.sh  one-click-cloud.bat  restore.sh
.github/cloud-deploy/fail2ban/jail.d/: caddy-auth.local
.github/cloud-deploy/systemd/: microscope-memory-backup.service
.github/ollama/: Modelfile  README.md
.github/openclaw/: README.md  install-openclaw-integration.sh
.github/openclaw/skills/pipeline/: SKILL.md
.github/openclaw/tools/: microscope-memory-api.sh
.github/workflows/: ci.yml  wasm-deploy.yml
benches/: microscope_bench.rs
data/: fingerprints.idx
docs/: ARCHITECTURE.md  BENCHMARK_EXPLANATION.md  HOOKS.md  RELEASE_PUBLIC_DEMO.md
electron/: main.js  package-lock.json  package.json  preload.js
electron/renderer/: app.js  index.html  style.css
examples/: autogpt_plugin.py  cline_mcp.json  cloudflare_worker.js  cognitive_enhancement.md  config.local-full.toml  config.public-demo.toml  demo.sh  discord_bot.py  docker_compose.yml  home_assistant.py  kilo_code_mcp.json  langbase_agent.py  mcp_integration.py  n8n_webhook.json  nodejs_client.mjs  obsidian_plugin.py  ollama_rag.py  openai_assistant.py  opencode_mcp.py  python_demo.py  python_quickstart.py  rest_api_examples.sh  slack_bot.py  streamlit_app.py  vscode_mcp_settings.json  whatsapp_bot.py
examples/layers/: associative.json  crypto_chain.json  echo_cache.json  emotional.json  long_term.json  reflections.json  relational.json  rust_state.json  short_term.json
layers/: associative.json  associative.txt  code.txt  crypto_chain.json  crypto_chain.txt  demo.txt  echo_cache.json  echo_cache.txt  emotional.json  emotional.txt  identity.txt  long_term.json  long_term.txt  meta_cognitive.txt  project.txt  reflections.json  reflections.txt  relational.json  relational.txt  rust_state.json  rust_state.txt  session.txt  short_term.json  short_term.txt
mermaid/modules/: chat.js  core.js  dashboard.js  diff.js  rongyasz.js  skills.js  voice.js
mermaid/styles/: chat.css  core.css  diff.css  voice.css
mermaid_app/: index.html  manifest.json  sw.js
mermaid_app/modules/: chat.js  core.js  dashboard.js  pipeline.js  rongyasz.js  voice.js
mermaid_app/styles/: dashboard.css
microscope-hooks/: Cargo.toml
microscope-hooks/src/: contract.txt  lib.rs
modules/: chat.js  rongyasz.js  settings.js
native/: index.d.ts  index.js  package-lock.json
orchestrator/: Cargo.toml
orchestrator/src/: commands.rs  dispatcher.rs  main.rs  modules.rs
pwa/: app.js  chat.html  manifest.json  service-worker.js  styles.css
scripts/: auto-inject.ps1  auto-inject.sh  auto-save.ps1  claude-settings.template.json  install-claude-hooks.ps1  install-claude-hooks.sh  install.ps1  install.sh  microscope-recall-hook.ps1  mm  run_public_demo.ps1  start.bat  start_agent_stack.bat  stop.bat  test_release.ps1
server-data/microscope-server/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LAUNCH_KIT.md  OneClick_Start.bat  README.md  build-wasm.sh  build.rs  openapi.json  openapi.yaml  recall.cmd
server-data/microscope-server/.github/cloud-deploy/: Caddyfile  Caddyfile.allowlist  README.md  deploy.sh  docker-compose.yml  easy-start.sh  one-click-cloud.sh
server-data/microscope-server/.github/mobile/: README.md
server-data/microscope-server/.github/ollama/: ollama_sidecar.py
server-data/microscope-server/benches/: microscope_bench.rs
server-data/microscope-server/data/: fingerprints.idx
server-data/microscope-server/examples/: index.html  langchain_integration.py
server-data/microscope-server/scripts/: start.bat
server-data/microscope-server/src/: ai_adapter.rs  bridge.rs  cli.rs  config.rs  doctor.rs  embedding_index.rs  embeddings.rs  emotional_contagion.rs  hebbian.rs  lib.rs  main.rs  mcp.rs  predictive_cache.rs  python.rs  reader.rs  resonance.rs  syscaller.rs  viz.rs  wasm.rs
server-data/microscope-server/tests/: integration.rs
server-data/microscope-server/website/: app.js
src/: advanced_cognition.rs  ai_adapter.rs  antidebug.rs  archetype.rs  architecture_generator.rs  architecture_simulator.rs  attention.rs  auto_context.rs  autonomous.rs  autopoiesis.rs  bridge.rs  build.rs  cache.rs  chatgpt.rs  cli.rs  code_memory.rs  config.rs  consciousness_seqlock.rs  consciousness_stream.rs  curiosity.rs  daydream.rs  depth_cache.rs  doctor.rs  dream.rs  embedding_index.rs  embeddings.rs  emotional.rs  emotional_21d.rs  emotional_contagion.rs  emotional_state.rs  eureka.rs  executive.rs  explicit_memory.rs  federation.rs  fingerprint.rs  functional_plasticity.rs  genome.rs  gpu.rs  hebbian.rs  heuristic_decision.rs  (+55 more)
src/commands/: bench.rs  cognitive.rs  federated.rs  init.rs  mod.rs  recall.rs  search.rs  serve.rs  verify.rs  viz.rs
src/shaders/: compute.wgsl
src/shp/: client.rs  mod.rs  packet.rs  protocol.rs  server.rs
src/viz/: camera.rs  edges.rs  mod.rs  picking.rs  renderer.rs  scene.rs  ui.rs
src/viz/shaders/: edge.wgsl  point.wgsl
styles/: settings.css
tests/: ai_integration.rs  consciousness_perf.rs  integration.rs  race_condition_test.rs
tests/fixtures/layers/: long_term.json  long_term.txt  short_term.json  short_term.txt
tools/: edge_tts_server.py
web-demo/: README.md  index.html
website/: app.js  index.html  styles.css
(+12 files in other folders)
