[package]
name = "microscope-memory"
version = "0.4.0"
edition = "2021"
authors = ["Máté Róbert (Silent)"]
description = "Zoom-based hierarchical memory — SIMD optimized vector L2 + mmap, sub-microsecond queries."
readme = "README.md"
homepage = "https://github.com/silentnoisehun/microscope-memory"
repository = "https://github.com/silentnoisehun/microscope-memory"
license = "MIT"
keywords = ["memory", "indexing", "mmap", "vector-search", "simd", "rayon"]
categories = ["data-structures", "algorithms", "memory-management", "science"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
colored = "2"
memmap2 = "0.9"
rayon = "1.8"
toml = "0.8"

# WASM dependencies
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = ["console"], optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

# Merkle tree integrity
sha2 = "0.10"

# GPU acceleration
wgpu = { version = "0.19", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
pollster = { version = "0.4", optional = true }
futures = { version = "0.3", optional = true }

# Real embeddings (candle)
candle-core = { version = "0.8", optional = true }
candle-nn = { version = "0.8", optional = true }
candle-transformers = { version = "0.8", optional = true }
hf-hub = { version = "0.4", optional = true, features = ["tokio"] }
tokenizers = { version = "0.21", optional = true }

# ONNX Runtime embeddings
ort = { version = "2.0.0-rc.12", optional = true }
ndarray = { version = "0.16", optional = true }

# Compression
zstd = { version = "0.13", optional = true }

# HTTP server
tiny_http = "0.12"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "microscope_bench"
harness = false

[features]
default = []
wasm = ["wasm-bindgen", "web-sys", "console_error_panic_hook"]
python = ["pyo3"]
gpu = ["wgpu", "bytemuck", "pollster", "futures"]
embeddings = ["candle-core", "candle-nn", "candle-transformers", "hf-hub", "tokenizers"]
onnx = ["ort", "ndarray", "tokenizers"]
compression = ["zstd"]

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
