[package]
name = "microscope-memory"
version = "0.6.0"
edition = "2021"
authors = ["Microscope Contributors"]
description = "Pure binary cognitive memory engine. Zero-JSON, mmap-based, hierarchical memory architecture."
readme = "README.md"
homepage = "https://github.com/silentnoisehun/microscope-memory"
repository = "https://github.com/silentnoisehun/microscope-memory"
license = "MIT"
keywords = ["memory", "indexing", "mmap", "vector-search", "simd", "rayon"]
categories = ["data-structures", "algorithms", "memory-management", "science"]
exclude = [
    "layers/*",
    "output/*",
    ".github/*",
    "tests/fixtures/*",
    "tests/data/*",
    "scripts/*",
    "tools/*",
    "nul",
    "*.txt",
    "*.log",
    "errors.txt",
    "compile_errors.txt",
    "test_errors.json",
]


[lib]
name = "microscope_memory"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "microscope-mem"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
memmap2 = "0.9"
rayon = "1.8"
sha2 = "0.10"
thiserror = "1.0"
bincode = "1.3"
rand = "0.8"
zstd = { version = "0.13", optional = true }

# Optional features
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
wgpu = { version = "0.19", optional = true }
bytemuck = { version = "1.13", features = ["derive"], optional = true }
pollster = { version = "0.3", optional = true }
candle-core = { version = "0.3", optional = true }
candle-nn = { version = "0.3", optional = true }
hf-hub = { version = "0.3", optional = true }
tokenizers = { version = "0.15", optional = true }

[features]
default = []
python = ["pyo3"]
compression = ["zstd"]
gpu = ["wgpu", "bytemuck", "pollster"]
embeddings = ["candle-core", "candle-nn", "hf-hub", "tokenizers"]

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "microscope_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
