[package]
name = "microscope-memory"
version = "0.7.0"
edition = "2021"
authors = ["Microscope Contributors"]
description = "Pure binary cognitive memory engine with REST API bridge for LLM integration. Zero-JSON core, mmap-based, hierarchical, sub-microsecond search."
readme = "README.md"
homepage = "https://github.com/silentnoisehun/microscope-memory"
repository = "https://github.com/silentnoisehun/microscope-memory"
license = "MIT"
keywords = ["memory", "llm", "mmap", "vector-search", "api"]
categories = ["data-structures", "algorithms", "memory-management", "web-programming"]
exclude = [
    "layers/*",
    "output/*",
    ".github/*",
    "tests/fixtures/*",
    "tests/data/*",
    "scripts/*",
    "tools/*",
    "*.txt",
    "*.log",
    "errors.txt",
    "compile_errors.txt",
    "test_errors.json",
]


[lib]
name = "microscope_memory"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "microscope-mem"
path = "src/main.rs"
required-features = ["native"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
memmap2 = "0.9"
rayon = "1.8"
sha2 = "0.10"
thiserror = "1.0"
bincode = "1.3"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0"
zstd = { version = "0.13", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Memory", "Win32_System_Threading", "Win32_Foundation", "Win32_System_LibraryLoader", "Win32_System_SystemInformation", "Win32_System_Registry"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
axum = "0.7"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

# Optional features
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
wgpu = { version = "0.19", optional = true }
bytemuck = { version = "1.13", features = ["derive"], optional = true }
pollster = { version = "0.3", optional = true }
candle-core = { version = "0.3", optional = true }
candle-nn = { version = "0.3", optional = true }
hf-hub = { version = "0.3", optional = true }
tokenizers = { version = "0.15", optional = true }

[features]
default = ["native"]
native = []
wasm = []
python = ["pyo3"]
compression = ["zstd"]
gpu = ["wgpu", "bytemuck", "pollster"]
embeddings = ["candle-core", "candle-nn", "hf-hub", "tokenizers"]
onnx = []
stealth = []

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bench]]
name = "microscope_bench"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
