[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "microscope-memory"
version = "0.8.0"
description = "Cognitive memory engine with morphogenesis, pattern recognition, executive, planning, autopoiesis. Zero-JSON, mmap-based, hierarchical memory architecture."
authors = [{name = "Microscope Contributors"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/silentnoisehun/microscope-memory"
Repository = "https://github.com/silentnoisehun/microscope-memory"

[tool.maturin]
features = ["python"]
module-name = "microscope_memory"
