[package]
name = "microscope-hooks"
version = "0.1.0"
edition = "2021"
description = "Hook system for Microscope Memory — thin orchestration layer for LLM lifecycle events."
authors = ["Microscope Contributors"]
license = "MIT"

[lib]
name = "microscope_hooks"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

[features]
default = []
mcp = []
wasm = []
