[package]
name = "spine-orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.9"
atomic_refcell = "0.1"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "0.21"
futures-util = "0.3"
